# dealsteal

./: .env.tmpl  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  install.sh  makefile  pyproject.toml  requirements.txt  run.sh
src/dealsteal/: __init__.py  ebay.py  runner.py  task.py  todoist.py
src/tests/: test_ebay.py  test_todoist.py
